--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -291,9 +291,9 @@
             <td title="{{ item.codCorrespondenciaEnc }}">{{ item.codReferenciaSreci }}</td>
             <td style="cursor:help" title="Nombre: {{ item.descDeptoFuncional }}">{{ item.inicialesDeptoFuncional }}</td>
             <td>{{ item.nombre1Funcionario }} - {{ item.apellido1Funcionario }}</td>
-            <td>{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
-            <td>{{ item.fechaMaxEntrega | date :'dd-MMM-yyyy' }}</td>
-            <td>{{ item.fechaFinalizacion | date :'dd-MMM-yyyy' }}</td>
+            <td>{{ item.fechaIngreso | date :'dd-MM-yyyy' }}</td>
+            <td>{{ item.fechaMaxEntrega | date :'dd-MM-yyyy' }}</td>
+            <td>{{ item.fechaFinalizacion | date :'dd-MM-yyyy' }}</td>
             <td style="cursor:help" title="Nombre: {{ item.perfilInstitucion }}" >{{ item.descInstitucion }}</td>
             <td style="cursor:help" title="Descripción: {{ item.descCorrespondenciaEnc }}">{{ item.temaComunicacion }}</td>
             <td>{{ item.descCorrespondenciaEnc }}</td>
