--- a/Angular_SICDOC/sicdoc/src/app/app.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/app.component.css
@@ -36,3 +36,25 @@
 .custom-file-control:lang(en)::before {
   content: "Buscar";
 }
+
+
+.border-effect { height:15px;width:20%;margin-top: 2px; }
+
+      * {
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+
+      .item {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+      }
+
+      .item img {
+        max-width: 100%;
+        -moz-transition: all 0.3s;
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s;
+      }
