--- a/Angular_SICDOC/sicdoc/src/app/views/shared/default.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/default.component.html
@@ -15,11 +15,11 @@
         <div class="container">
           <h1 class="display-3">Bienvenid@: {{ identity.nombre }} {{ identity.apellido }} </h1>
           <!-- <p class="lead">Hola:  {{ identity.nombre }} {{ identity.apellido }}, te presentamos el resumen de Comunicación</p> -->
-        
+
         <!-- Inicio de Resumenes de Activiadades SICDOC   -->
         <!-- Row # 1 de Resumenes -->
         <!-- <h5 class="h5">Oficios</h5>
-        <div class="row">              
+        <div class="row-fluid">
           <div class="col-md-2 col-lg-2">
               <div class="panel panel-info">
                 <div class="panel-heading">
@@ -29,10 +29,13 @@
                     </div>
                     <div class="col-xs-3 text-right">
                       <p class="announcement-heading">1</p>
-                      <p class="announcement-text">Pendientes</p>
+                      <p class="announcement-text"> Pendientes</p>
                     </div>
                   </div>
-                </div> -->
+                </div>
+              </div>
+            </div>
+          </div> -->
                 <!-- <a href="#">
                   <div class="panel-footer announcement-bottom">
                     <div class="row">
@@ -60,7 +63,7 @@
                       <p class="announcement-text"> Finalizados</p>
                     </div>
                   </div>
-                </div>                
+                </div>
               </div>
             </div>
             <div class="col-lg-2">
@@ -78,7 +81,7 @@
                 </div>
               </div>
             </div>
-            
+
             <div class="col-lg-2">
               <div class="panel panel-success">
                 <div class="panel-heading">
@@ -88,7 +91,7 @@
                     </div>
                     <div class="col-xs-3 text-right">
                       <p class="announcement-heading">9000</p>
-                      <p class="announcement-text"> Orders!</p>                                
+                      <p class="announcement-text"> Orders!</p>
                     </div>
                   </div>
                 </div>
@@ -104,7 +107,7 @@
                       </div>
                       <div class="col-xs-3 text-right">
                         <p class="announcement-heading">9000</p>
-                        <p class="announcement-text"> Orders!</p>                                
+                        <p class="announcement-text"> Orders!</p>
                       </div>
                     </div>
                   </div>
@@ -121,22 +124,72 @@
                         </div>
                         <div class="col-xs-3 text-right">
                           <p class="announcement-heading">9000</p>
-                          <p class="announcement-text"> Orders!</p>                                
+                          <p class="announcement-text"> Orders!</p>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div> 
+                </div>
 
 
           </div> -->
           <!-- /.row -->
 
           <!-- <hr> -->
-          
+
 
         <!-- </div> -->
         <!-- Fin de Primer Container -->
+
+        <div class="card-deck">
+          <div class="card">
+            <div class="item">
+              <img class="card-img-top" src="http://lorempixel.com/318/348/sports/1/" alt="Card image cap">
+            </div>
+            <div class="border-effect bg-warning"></div>
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="item">
+              <img class="card-img-top" src="http://lorempixel.com/318/348/sports/2/" alt="Card image cap">
+            </div>
+            <div class="border-effect bg-warning"></div>
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="item">
+              <img class="card-img-top" src="http://lorempixel.com/318/348/sports/3/" alt="Card image cap">
+            </div>
+            <div class="border-effect bg-warning"></div>
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="item">
+              <img class="card-img-top" src="http://lorempixel.com/318/348/sports/4/" alt="Card image cap">
+            </div>
+            <div class="border-effect bg-warning"></div>
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+
+
       </div>
-    </div>    
+
+    </div>
 </div>
