--- a/Angular_SICDOC/sicdoc/src/app/views/shared/default.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/default.component.html
@@ -141,7 +141,7 @@
         <!-- </div> -->
         <!-- Fin de Primer Container -->
 
-        <div class="card-deck">
+        <!-- <div class="card-deck">
           <div class="card">
             <div class="item">
               <img class="card-img-top" src="http://lorempixel.com/318/348/sports/1/" alt="Card image cap">
@@ -186,10 +186,12 @@
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
-        </div>
+        </div> -->
 
+        <app-chart-home></app-chart-home>
 
       </div>
 
     </div>
+
 </div>
