--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -31,6 +31,10 @@
                     <img src="/assets/icons/comunicacion/businessmen-disussing_blue_24x24.png" class="d-inline-block align-top" alt="">
                     Salida de Comunicación</a>
                   <hr>
+                  <a class="dropdown-item" [routerLink]="['comunicacion/editar-comunicacion']" routerLinkActive="active">
+                    <img src="/assets/icons/comunicacion/written-page_blue_24x24.png" class="d-inline-block align-top" alt="">
+                    Editar Comunicación</a>
+                  <hr>
                     <a class="dropdown-item" [routerLink]="['comunicacion/documentos-de-comunicacion']" routerLinkActive="active">
                       <img src="/assets/icons/comunicacion/computer-and-books-studying-tools_24x24.png" class="d-inline-block align-top" alt="">
                       Documentos de Comunicación</a>
