--- a/Angular_SICDOC/sicdoc/src/app/components/charts/chart.home/chart.home.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/charts/chart.home/chart.home.component.html
@@ -1,4 +1,5 @@
 <div>
+  <p>Resumen de las Comunicaciones</p>
   <div style="display: block">
     <canvas baseChart
             [datasets]="barChartData"
