--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -82,6 +82,10 @@
                 <a class="dropdown-item" [routerLink]="['consultas/consulta-generacion-reporte']" routerLinkActive="active">
                   <img src="/assets/icons/comunicacion/professional-profile-with-image_blue_24x24.png" class="d-inline-block align-top" alt="">
                   Generación de Reportes</a>
+                <hr>
+                <a class="dropdown-item" [routerLink]="['consultas/consulta-reporte-resumido']" routerLinkActive="active">
+                  <img src="/assets/icons/comunicacion/zoom-interface-symbol-of-text-paper-with-a-magnifier-glass_blue_24x24.png" class="d-inline-block align-top" alt="">
+                  Reporte Resumido</a>
               </div>
             </li>
 
