--- a/Angular_SICDOC/sicdoc/src/app/components/charts/chart.home/chart.home.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/charts/chart.home/chart.home.component.html
@@ -1,6 +1,11 @@
 <div>
+  <!-- Loader de Carga de los Datos -->
+  <div id="loader-2" *ngIf="loading == 'gg' " style="margin-left:45%; margin-bottom:2%;">
+    <!-- <img src="assets/images/aguarde.gif" alt="Cargando Tareas"> -->
+    <img src="assets/images/832.gif" alt="Cargando Tareas">
+  </div>
   <p>Resumen de las Comunicaciones</p>
-  <div style="display: block">
+  <div style="display: block" *ngIf="loading == 'show' ">
     <canvas baseChart
             [datasets]="barChartData"
             [labels]="barChartLabels"
