--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -297,7 +297,14 @@
             <td style="cursor:help" title="Nombre: {{ item.perfilInstitucion }}" >{{ item.descInstitucion }}</td>
             <td style="cursor:help" title="Descripción: {{ item.descCorrespondenciaEnc }}">{{ item.temaComunicacion }}</td>
             <td>{{ item.descCorrespondenciaEnc }}</td>
-            <td>{{ item.descripcionEstado }}</td>
+            <td>
+              <span [ngClass]="{ 'text-warning': item.idEstado == 3,
+                              'text-primary': item.idEstado == 5,
+                              'text-success': item.idEstado == 7,
+                              'text-info': item.idEstado == 8 }"
+                data-toggle="tooltip" data-placement="top" title="Estados de Comunicacion" >
+                {{ item.descripcionEstado }} </span>
+            </td>
           </tr>
         </tbody>
       </table>
