--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.resumido/reporte.resumido.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.resumido/reporte.resumido.component.html
@@ -76,8 +76,8 @@
             <th>Direccion Responsable</th>
             <th>Funcionario Responsable</th>
             <th>Nombre de Institución</th>
-            <th>Iniciales de Institución</th>
-            <th>Tema / Asunto</th>
+            <!-- <th>Iniciales de Institución</th> -->
+            <!-- <th>Tema / Asunto</th> -->
             <th>Descripción / Comunicación</th>
             <th>Estado</th>
           </tr>
@@ -88,10 +88,11 @@
             <td style="cursor:help" title="Nombre: {{ item.descDeptoFuncional }}">{{ item.inicialesDeptoFuncional }}</td>
             <td>{{ item.nombre1Funcionario }} - {{ item.apellido1Funcionario }}</td>
             <td >{{ item.perfilInstitucion }} </td>
-            <td style="cursor:help" title="Nombre: {{ item.perfilInstitucion }}" >{{ item.descInstitucion }}</td>
-            <td style="cursor:help" title="Descripción: {{ item.descCorrespondenciaEnc }}">{{ item.temaComunicacion }}</td>
+            <!-- <td style="cursor:help" title="Nombre: {{ item.perfilInstitucion }}" >{{ item.descInstitucion }}</td> -->
+            <!-- <td style="cursor:help" title="Descripción: {{ item.descCorrespondenciaEnc }}">{{ item.temaComunicacion }}</td> -->
             <td style="cursor:help" title="Descripción: {{item.descCorrespondenciaEnc}}">
-                {{ (item.descCorrespondenciaEnc.length>10)? (item.descCorrespondenciaEnc | slice:0:40)+'..':(item.descCorrespondenciaEnc) }}
+                <!-- {{ (item.descCorrespondenciaEnc.length>10)? (item.descCorrespondenciaEnc | slice:0:40)+'..':(item.descCorrespondenciaEnc) }} -->
+                {{ item.descCorrespondenciaEnc }}
             </td>
             <td>
               <span [ngClass]="{ 'text-warning': item.idEstado == 3,
